# exercises

./: .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  avifconv.py  build.py  build_config.yml  pyproject.toml
changeset/: 00_freedb_copy.py  01_setenv.py  02_freedb_copy.py  03_freedb_initial_ids.py  03_freedb_rename.py  04_freedb_regenerate_model.py  05_freedb_load.py  freedb_patch.yml
models/freedb/: __init__.py  base.py  genmodel.py  model.py
tools/: batch.py  common.py  genmodel.py  lint.py
